<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_group_runner" >
        <item
            android:id="@+id/menu_item_format"
            android:title="@string/format_runner" />

        <item
            android:id="@+id/menu_item_clear"
            android:title="@string/clear_punches" />

        <item
            android:id="@+id/menu_item_punch"
            android:title="@string/punch" />

        <item
            android:id="@+id/menu_item_read_runner"
            android:title="@string/read_runner" />

        <item
            android:id="@+id/menu_item_reset"
            android:title="@string/reset_card" />
    </group>

    <group android:id="@+id/menu_group_service" >
        <item
            android:id="@+id/menu_item_format_service"
            android:title="@string/format_service" />

        <item
            android:id="@+id/menu_item_punch_service"
            android:title="@string/punch_service" />

        <item
            android:id="@+id/menu_item_read_service"
            android:title="@string/read_service" />
    </group>
</menu>
