<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/common"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/format_runner_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameProgressBar"/>

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/format_runner_instruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction">

        <TextView
            android:text="@string/key_12_digits"
            android:layout_row="0"
            android:layout_column="0"
            android:labelFor="@id/editKey"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/key_12_hex_digits"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789ABCDEF"
                android:inputType="textPassword"
                android:maxLength="12"
                android:layout_row="0"
                android:layout_column="1"
                tools:ignore="VisualLintTextFieldSize"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/card_id"
            android:layout_row="1"
            android:layout_column="0"
            android:labelFor="@id/editCardId" />

        <EditText
            android:id="@+id/editCardId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/card_id"
            android:inputType="number"
            android:max="65535"
            android:maxLength="5"
            android:min="0"
            android:padding="16dp"
            android:text="@string/_1"
            android:layout_row="1"
            android:layout_column="1"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/scanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/scan_qr"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
